--- a/iframe-assistant-simple/css/style.css
+++ b/iframe-assistant-simple/css/style.css
@@ -10,6 +10,12 @@ body {
   background-color: rgba(204, 204, 179, 0.3)  !important;
 }
 
+.logoNavbar {
+  width:50px;
+  height:50px;
+  border-radius:50%;
+}
+
 .iframe {
   background:rgba(204, 204, 179, 0.3)  !important;
   position:absolute; 
@@ -35,8 +41,20 @@ body {
   right:50px;
   top:44%;
   z-index:1;
-  color:white;
+  cursor:pointer;
 }
+
+#botonMinIframe {
+  position:absolute;
+  right:90px;
+  top:40%;
+  z-index:1;
+  color:black;
+  font-size:40px;
+  cursor:pointer;
+}
+
+
 
 .divHeaderIframe {
   background: #FF851B;
@@ -47,4 +65,12 @@ body {
   height:50px;
   border-radius: 10px;
   z-index:1;
+}
+
+#imgChat {
+  position:absolute;
+  bottom:30px;
+  right:30px;
+  width:50px;
+  cursor:pointer;
 }
