--- a/public/css/app.css
+++ b/public/css/app.css
@@ -136,7 +136,7 @@ div {
   line-height: 1.3125rem;
   background: #FF851B; ;
   border-radius: 1.25rem;
-  border-bottom-right-radius: 0;
+/*  border-bottom-right-radius: 0;*/
   text-align: left;
   display: inline-block;
   margin-left: 2.5rem;
@@ -155,22 +155,22 @@ div {
 
 
 .from-user .message-inner:before {
-  z-index: -2;
+  /*z-index: -2;
   bottom: -0.375rem;
   right: 0;
   height: 0.375rem;
   width: 0.5rem;
-  background: #FF851B;
+  background: #FF851B;*/
 }
 
 .from-user .message-inner:after {
-  z-index: -1;
+  /*z-index: -1;
   bottom: -0.5rem;
   right: 0;
   height: 0.5rem;
   width: 0.5rem;
   background: #fff;
-  border-top-right-radius: 1.25rem;
+  border-top-right-radius: 1.25rem;*/
 }
 
 .from-watson, 
@@ -189,20 +189,21 @@ div {
 
 .from-watson p {
   margin: 0.3125rem;
-  padding: 0 1.25rem;
+  padding: 0 2.25rem;
 }
 
 .from-watson.latest.top p:before {
   content: ".";
   color: #FF851B; 
-  background-image: url("../img/marker_image.png");
-  background-size: 0.3125rem 1.3125rem;
+  background-image: url("../img/logo.png");
+  background-repeat: no-repeat;
+  background-size: 1.5rem 1.5rem;
+  border-radius:50%;
   position: absolute;
   z-index: 2;
-  left: 0.4375rem;
-  width: 0.3125rem;
-  height: 1.3125rem;
-  line-height: 1.3125rem;
+  left: 0;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 #textInput {
